made the summary cards into buttons

--- a/Neuronudge/templates/dashboard_customized.html
+++ b/Neuronudge/templates/dashboard_customized.html
@@ -63,7 +63,7 @@
       <i class="bi bi-plus-lg"></i> New Task
     </button>
 
-    <a href="{{ url_for('main.task_list') }}" class="btn btn-outline-secondary">
+    <a href="{{ url_for('main.all_tasks') }}" class="btn btn-outline-secondary">
       <i class="bi bi-list-ul"></i> All Tasks
     </a>
 
