--- a/Neuronudge/templates/dashboard_dyslexia.html
+++ b/Neuronudge/templates/dashboard_dyslexia.html
@@ -46,7 +46,7 @@
       <a href="{{ url_for('main.create_task') }}" class="btn btn-lg btn-primary" aria-label="Create new task">
         <i class="fa-solid fa-plus"></i> New Task
       </a>
-      <a href="{{ url_for('main.task_list') }}" class="btn btn-lg btn-outline-secondary" aria-label="View all tasks">
+      <a href="{{ url_for('main.all_tasks') }}" class="btn btn-lg btn-outline-secondary" aria-label="View all tasks">
         <i class="fa-solid fa-list"></i> All Tasks
       </a>
       <a href="{{ url_for('main.onboarding') }}" class="btn btn-lg btn-outline-info" aria-label="Update preferences">
