--- a/Neuronudge/templates/layout_dyslexia.html
+++ b/Neuronudge/templates/layout_dyslexia.html
@@ -88,7 +88,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if request.endpoint == 'main.task_list' %}active{% endif %}" href="{{ url_for('main.task_list') }}">
+                        <a class="nav-link {% if request.endpoint == 'main.all_tasks' %}active{% endif %}" href="{{ url_for('main.all_tasks') }}">
                             <i class="fa-solid fa-list"></i> Tasks
                         </a>
                     </li>
