--- a/Neuronudge/templates/layout_adhd.html
+++ b/Neuronudge/templates/layout_adhd.html
@@ -73,7 +73,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('main.dashboard') }}">Dashboard</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('main.all_tasks') }}">Tasks</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('main.task_list') }}">Tasks</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('main.onboarding') }}">Preferences</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('main.profile') }}">Profile</a></li>
                     <li class="nav-item"><a class="nav-link text-danger" href="{{ url_for('auth.logout') }}">Logout</a></li>
